- Fix TypeError raised by debugprint call (https://github.com/zdohnal/system-config-printer/pull/121)
- dbus: remove deprecated at_console statement (https://github.com/zdohnal/system-config-printer/pull/123)
- fixed several memory leaks reported by Coverity scan
- temporary fix for error pop up message for IPP2.0+ attributes (https://github.com/zdohnal/system-config-printer/issues/122)

1.5.10 changes
--------------

- printer couldn't be add ( https://bugzilla.redhat.com/show_bug.cgi?id=1419175 ) 
- changes from Ubuntu by Till Kamppeter (https://github.com/zdohnal/system-config-printer/pull/64)
- .travis.yml: switch from precise to trusty (https://github.com/zdohnal/system-config-printer/pull/63)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (https://github.com/zdohnal/system-config-printer/pull/62)
- Add a StartService for systemd based systems (https://github.com/zdohnal/system-config-printer/pull/56)
- French translation update (https://github.com/zdohnal/system-config-printer/pull/57) 
- Spelling fixes (https://github.com/zdohnal/system-config-printer/pull/58)
- Syntax fixes (https://github.com/zdohnal/system-config-printer/pull/59)
- Python 3.6 invalid escape sequence deprecation fixes (https://github.com/zdohnal/system-config-printer/pull/60)
- Adds printer properties dialog vertical expansion (https://github.com/zdohnal/system-config-printer/pull/61)
- Replace icons deprecated by GTK 3.0 by non-deprecated ones (https://github.com/zdohnal/system-config-printer/pull/62) 
- Improvements of discovered devices/conection type lists in new-printer wizard, more debug output (https://github.com/zdohnal/system-config-printer/pull/65)
- replace libgnome-keyring by libsecret (https://github.com/zdohnal/system-config-printer/issues/51)
- Do not start the applet on GNOME and Cinnamon desktops (https://github.com/zdohnal/system-config-printer/pull/41)