@@ -15,6 +15,7 @@
 - dbus: remove deprecated at_console statement (https://github.com/zdohnal/system-config-printer/pull/123)
 - fixed several memory leaks reported by Coverity scan
 - temporary fix for error pop up message for IPP2.0+ attributes (https://github.com/zdohnal/system-config-printer/issues/122)
+- lpd queue names printed on the console (https://github.com/zdohnal/system-config-printer/issues/132)
 
 1.5.10 changes
 --------------
